--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.21.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@reduxjs/toolkit": "^2.8.2",
-    "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "daisyui": "^5.0.46",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.0",
     "js-cookie": "^3.0.5",
