--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.0.2",
