--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "daisyui": "^5.0.46",
     "date-fns": "^4.1.0",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.23.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
